adjust the padding on homepage to ensure proper gaps between sections

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -741,3 +741,8 @@ button.github {
     background-color: #24292e;
     color: white;
 }
+
+/* Make every .uk-section element inside .content have padding-bottom: 0 */
+.content > .uk-section {
+    padding-bottom: 0;
+}
